# zenmoney-rs

./: .dockerignore  .gitignore  .jscpd.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-02-27-api-client-design.md
examples/: create_transaction.rs
src/: client.rs  error.rs  lib.rs  models.rs  storage.rs  zen_money.rs
src/client/: async_client.rs
src/models/: account.rs  budget.rs  company.rs  country.rs  diff.rs  enums.rs  ids.rs  instrument.rs  merchant.rs  reminder.rs  reminder_marker.rs  suggest.rs  tag.rs  transaction.rs  user.rs
src/storage/: file.rs  memory.rs
