[package]
name = "zenmoney-rs"
version = "0.1.1"
edition = "2024"
description = "Rust client library for the ZenMoney API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sakost/zenmoney-rs"
homepage = "https://github.com/sakost/zenmoney-rs"
readme = "README.md"
keywords = ["zenmoney", "finance", "api-client", "budget", "sync"]
categories = ["api-bindings", "finance"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_results = "deny"
variant_size_differences = "warn"
let_underscore_drop = "deny"
meta_variable_misuse = "deny"
non_ascii_idents = "forbid"

[lints.clippy]
# Lint groups — all elevated to deny
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Restrictions — deny level for maximum strictness
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
clone_on_ref_ptr = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
if_then_some_else_none = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
mutex_atomic = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "allow"
str_to_string = "deny"
string_add = "deny"
implicit_clone = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_self_imports = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

# Additional restrictions
alloc_instead_of_core = "deny"
allow_attributes_without_reason = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
create_dir = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
empty_drop = "deny"
error_impl_error = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
map_err_ignore = "deny"
missing_asserts_for_indexing = "deny"
missing_docs_in_private_items = "deny"
missing_inline_in_public_items = "warn"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
needless_raw_strings = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pattern_type_mismatch = "deny"
pub_without_shorthand = "deny"
redundant_closure_for_method_calls = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
semicolon_outside_block = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
single_char_lifetime_names = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_in_result = "deny"
use_debug = "deny"
wildcard_dependencies = "deny"

[package.metadata.cargo-machete]
ignored = ["chrono", "clap", "secrecy", "reqwest", "url", "comfy-table", "dirs", "dotenvy", "indicatif", "owo-colors", "tracing-subscriber"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"], optional = true }
comfy-table = { version = "7.2.2", optional = true }
dirs = { version = "6", optional = true }
dotenvy = { version = "0.15.7", optional = true }
indicatif = { version = "0.18.4", optional = true }
owo-colors = { version = "4.3.0", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }
url = { version = "2.5.8", optional = true }

[features]
default = ["async", "storage-file", "cli"]
async = ["dep:reqwest"]
blocking = ["dep:reqwest", "reqwest/blocking"]
cli = ["blocking", "dep:clap", "dep:dotenvy", "dep:tracing-subscriber", "dep:comfy-table", "dep:owo-colors", "dep:indicatif"]
oauth = ["dep:url"]
storage-file = ["dep:dirs"]
storage-sqlx = []
full = ["async", "blocking", "oauth", "storage-file", "storage-sqlx", "cli"]

[[bin]]
name = "zenmoney"
required-features = ["cli"]
